--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     height: 100dvh;
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     background-color: #001122;
 }
 .box{
